// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

message S3StorageConfig {
  uint64 version = 100;

  string region = 1;
  string endpoint_url = 2;
  string access_key_id = 3;
  string secret_access_key = 4;
  string bucket = 5;
  string root = 6;
  string master_key = 7;
  bool disable_credential_loader = 8;
}

message FsStorageConfig {
  uint64 version = 100;

  string root = 1;
}
